@@ -38,7 +38,8 @@ typedef enum
     GRUB_USB_ERR_BABBLE,
     GRUB_USB_ERR_TIMEOUT,
     GRUB_USB_ERR_BITSTUFF,
-    GRUB_USB_ERR_UNRECOVERABLE
+    GRUB_USB_ERR_UNRECOVERABLE,
+    GRUB_USB_ERR_BADDEVICE
   } grub_usb_err_t;
 
 typedef enum
